[gd_scene load_steps=3 format=3 uid="uid://b3g4u7r1nwbtg"]

[ext_resource type="PackedScene" uid="uid://ck7w6qrvlgxdq" path="res://assets/models/upgrades/cannon.glb" id="1_32vmg"]
[ext_resource type="Script" path="res://scripts/player/weapon_canon.gd" id="1_mifv0"]

[node name="WeaponCanon" type="Node3D"]
script = ExtResource("1_mifv0")

[node name="left_cannon" parent="." instance=ExtResource("1_32vmg")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.6, 0, 0)

[node name="left_cannon_marker" type="Marker3D" parent="left_cannon"]

[node name="right_cannon" parent="." instance=ExtResource("1_32vmg")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.6, 0, 0)

[node name="right_cannon_marker" type="Marker3D" parent="right_cannon"]
